--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             color: #fff;
             padding: 20px;
             text-align: center;
+            border-top: 5px solid red; /* Updated border color */
+            border-bottom: 5px solid red; /* Updated border color */
         }
         main {
             padding: 20px;
@@ -28,6 +30,8 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            border-top: 5px solid red; /* Updated border color */
+            border-bottom: 5px solid red; /* Updated border color */
         }
     </style>
 </head>
