--- a/past_projects.html
+++ b/past_projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Past Projects | Barnacle KGJ Inc</title>
-	<link rel="icon" type="image/ico" href="smiley_face.ico">
+	<link rel="icon" type="image/png" href="barnacle favicon.png">
 	<style>
 		body {
 			text-align: center;
