--- a/about_us.html
+++ b/about_us.html
@@ -57,7 +57,7 @@
 <body>
 	<!-- top navigation links -->
 	<div class="topnav">
-			<a href="barnacle_kgj.html">Home</a>
+			<a href="index.html">Home</a>
 			<a class="active" href="#">About Us</a>
 			<a href="past_projects.html">Past Projects</a>
 			<a href="contact_us.html">Contact Us</a>
