--- a/contact_us.html
+++ b/contact_us.html
@@ -65,7 +65,7 @@
 <body>
 	<!-- top navigation links -->
 	<div class="topnav">
-		<a href="barnacle_kgj.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="about_us.html">About Us</a>
 		<a href="past_projects.html">Past Projects</a>
 		<a class="active" href="#">Contact Us</a>
