--- a/past_projects.html
+++ b/past_projects.html
@@ -81,7 +81,7 @@
 <body>
 	<!-- top navigation links -->
 	<div class="topnav">
-		<a href="barnacle_kgj.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="about_us.html">About Us</a>
 		<a class="active" href="#">Past Projects</a>
 		<a href="contact_us.html">Contact Us</a>
