--- a/about_us.html
+++ b/about_us.html
@@ -94,7 +94,7 @@
     
     <!-- Employee 1 -->
     <div class="employee">
-        <img src="ceo pic.jpg" alt="Kerry Sabo">
+        <img src="CEO pic.jpg" alt="Kerry Sabo">
         <div class="employee-info">
             <h2>Kerry Sabo</h2>
             <h3>CEO</h3>
