--- a/about_us.html
+++ b/about_us.html
@@ -104,7 +104,7 @@
 
     <!-- Employee 2 -->
     <div class="employee">
-        <img src="timpic.jpg" alt="Tim Sabo">
+        <img src="timpic.JPG" alt="Tim Sabo">
         <div class="employee-info">
             <h2>Tim Sabo</h2>
             <h3>Engineering Specialist / R&D</h3>
