--- a/past_projects.html
+++ b/past_projects.html
@@ -98,8 +98,8 @@
             <div class="project-caption">
                 <h2>Custom Weld Booths</h2>
                 <div style="display: flex; justify-content: center;">
-                    <img src="weldbooth1.jpeg" alt="Project 1" style="width: 300px;">
-                    <img src="weldbooth2.jpeg" alt="Project 1 Second Image" style="width: 300px;">
+                    <img src="weldbooth1.JPEG" alt="Project 1" style="width: 300px;">
+                    <img src="weldbooth2.JPEG" alt="Project 1 Second Image" style="width: 300px;">
                 </div>
                 <p>Description: HVAC lab at career/Vocational school wanted 4 welding booths custom designed to fit onto their existing welding tables as students were not able to make proper use of "fume arms." The booths have inclined roofs to direct fumes to exhaust. The strip curtains allow students to walk through while self-closing to ensure welding arc light is contained. Within the booths, circulation causes the air to change 4-6 times per minute.</p>
                 <p>Date: January 2021 - April 2021</p>
